--- a/main_document.tex
+++ b/main_document.tex
@@ -1,10 +1,11 @@
 %
 % Document class
 \documentclass[a4paper,
-			  10pt]{scrreprt}
+			  12pt]{scrreprt}
 \usepackage[ngerman]{babel}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
+\usepackage{graphicx}
 
 % Blind text for demonstration purposes only
 \usepackage{lipsum}
@@ -17,7 +18,8 @@
 			right=5cm,
 			top=2cm,
 			bottom=2cm,
-			includeheadfoot]{geometry}
+			includeheadfoot,
+			driver=pdftex]{geometry}
 
 % Line spacing requirements
 \usepackage[onehalfspacing]{setspace}
@@ -39,6 +41,9 @@
 %
 % Document Body
 \begin{document} 
+
+%title page
+\include{pages_special/title_page}
 
 \lipsum
 
