Added affidavit page

--- a/main_document.tex
+++ b/main_document.tex
@@ -42,8 +42,11 @@
 % Document Body
 \begin{document} 
 
-%title page
+% title page
 \include{pages_special/title_page}
+
+% declaration
+\include{pages_special/affidavit}
 
 \lipsum
 
