Remove decorations from affidavit

--- a/main_document.tex
+++ b/main_document.tex
@@ -30,12 +30,13 @@
 % Header and Footer
 \usepackage{fancyhdr}
 \pagestyle{fancy}
+\renewcommand*{\chapterpagestyle}{fancy}
 \fancyhf{} 
 \fancyhead[L]{Titel}
 \fancyhead[C]{}
 \fancyhead[R]{}
 \renewcommand{\headrulewidth}{0.4pt}
-\fancyfoot[R]{\thepage} %Seitennummer
+\fancyfoot[R]{\thepage}
 \renewcommand{\footrulewidth}{0.0pt} 
 
 %
