--- a/pages_special/affidavit.tex
+++ b/pages_special/affidavit.tex
@@ -1,3 +1,4 @@
+% declaration
 \chapter*{Eidesstattliche Erklärung}
 Ich erkläre hiermit, dass ich die vorliegende wissenschaftliche Arbeit selbstständig angefertigt und die mit ihr unmittelbar verbundenen Leistungen selbst erbracht habe. Ich erkläre weiter, dass ich keine anderen als die angegebenen Hilfsmittel benutzt habe. Alle aus gedruckten, ungedruckten oder dem Internet im Wortlaut oder im wesentlichen Inhalt übernommenen Formulierungen und Konzepte wurden gemäß den Regeln für wissenschaftliche Arbeiten zitiert und durch genaue Quellenangaben gekennzeichnet.
 \par 
@@ -7,3 +8,6 @@ worden.
 Ich bestätige, dass der Inhalt der digitalen Version vollständig mit dem der gedruckten Version übereinstimmt. \par
 \vspace{3cm}
 (Unterschrift) (Ort, Datum) 
+
+% no page decorations
+\thispagestyle{empty}
