Basic literatur register

--- a/main_document.tex
+++ b/main_document.tex
@@ -40,6 +40,10 @@
 \renewcommand{\footrulewidth}{0.0pt} 
 
 %
+% Reference Management
+\usepackage{natbib}
+
+%
 % Document Body
 \begin{document} 
 
@@ -54,5 +58,8 @@
 
 % dummy structure - include things from the pages_text folder
 \input{pages_special/dummy}
+
+% table of contents
+\include{pages_special/references}
 
 \end{document} 
