--- a/pages_special/dummy.tex
+++ b/pages_special/dummy.tex
@@ -1,5 +1,7 @@
 \chapter{One}
-\lipsum
+
+\par In diesem Absatz stehen Sonderzeichen üöäÖÄÜ - Außerdem wird zitiert \cite{McAfee.2006}.
+
 \section{Aaaaaaaaaa}
 \lipsum
 \section{Bbbbbbbbbb bbbbbbb}
