Adjusted citation, added literature and toc to tco list

--- a/main_document.tex
+++ b/main_document.tex
@@ -41,7 +41,8 @@
 
 %
 % Reference Management
-\usepackage{natbib}
+% https://en.wikibooks.org/wiki/LaTeX/More_Bibliographies
+\usepackage[round,comma,authoryear]{natbib}
 
 %
 % Document Body
