--- a/pages_special/dummy.tex
+++ b/pages_special/dummy.tex
@@ -1,23 +1,14 @@
 \chapter{One}
 
-\par In diesem Absatz stehen Sonderzeichen üöäÖÄÜ - Außerdem wird zitiert \cite{McAfee.2006}.
+\par In diesem Absatz stehen Sonderzeichen üöäÖÄÜ - Außerdem wird zitiert \citep[vgl.][S. 3]{McAfee.2006}.
+\par Das Zitat könnte natürlich auch "wörtlich sein" \citep[S. 2]{McAfee.2006}	
 
 \section{Aaaaaaaaaa}
 \lipsum
 \section{Bbbbbbbbbb bbbbbbb}
 \lipsum
 \chapter{Two}
-\section{Aaaaaaaaaa}
-\lipsum
-\section{Bbbbbbbbbb bbbbbbb}
-\lipsum
-\section{Cccccccccccccc}
-\lipsum
-\section{Dddddddddddddd}
-\lipsum
 \appendix
-\chapter{Three}
-\section{Aaaaaaaaaa}
-\lipsum
-\section{Bbbbbbbbbb bbbbbbb}
-\lipsum
+\chapter{Anhang}
+\section{AAAA}
+\section{BBBB}
