--- a/pages_special/references.tex
+++ b/pages_special/references.tex
@@ -1,2 +1,6 @@
-\bibliographystyle{abbrvnat}
+% add to TOC
+\addcontentsline{toc}{chapter}{Literaturverzeichnis}
+
+% register
+\bibliographystyle{plainnat}
 \bibliography{demo-bibtex}
