Added garamond font

--- a/main_document.tex
+++ b/main_document.tex
@@ -13,6 +13,12 @@
 %
 % Layout
 
+% Font
+% https://www.tug.org/fonts/getnonfreefonts/
+% http://tex.stackexchange.com/questions/161673/how-can-i-set-the-chapter-titles-in-eb-garamond
+\usepackage[urw-garamond]{mathdesign}
+\addtokomafont{disposition}{\rmfamily}
+
 % Page format requirements
 \usepackage[left=3cm,
 			right=5cm,
