Break long urls in reference list

--- a/main_document.tex
+++ b/main_document.tex
@@ -55,6 +55,12 @@ afterskip=1cm]{chapter}
 % https://en.wikibooks.org/wiki/LaTeX/More_Bibliographies
 \usepackage[round,comma,authoryear]{natbib}
 
+% Break urls in references
+% https://norwied.wordpress.com/2012/07/10/how-to-break-long-urls-in-bibtex/
+\usepackage{url}
+\usepackage{breakurl}
+\usepackage[breaklinks]{hyperref}
+
 %
 % Document Body
 \begin{document} 
